--- a/index.html
+++ b/index.html
@@ -8,24 +8,23 @@
 </head>
 <body>
     <h1>Módulo 1 - Primeiros Passos com HTML</h1>
-    <hr />
-
-    <h2>Índice</h2>
-    <p><strong><u>INSTRUÇÕES:</u> </strong>Neste índice você deve colocar os tópicos que mais entendeu. Estes apenas são sugestões.</p>
-    <ul>
-        <li><a href="#">História dos computadores</a></li>
+    <hr>
+    <h2 id="indice">Índice</h2>
+        <li><a href="historia">História dos computadores</a></li>
         <li><a href="#">O que são <i>Clients</i>?</a></li>
         <li><a href="#">O que são <i>Servers</i>?</a></li>
         <li><a href="#">Como é uma estrutura básica de um HTML?</a></li>
-        <li><a href="#">Entendendo a diferença entre listas ordenadas e não ordenadas</a></li>
+        <li><a href="#">TAGs e suas funções</a></li>
         <li><a href="#">Links de referências</a></li>
     </ul>
+    <hr>
 
-    <h2>História dos computadores</h2>
-    <p><strong><u>INSTRUÇÕES:</u> </strong>Neste trecho, coloque com suas palavras o que entendeu sobre o assunto. 
-       Não esqueça de colocar links para outros sites e também de formatar o texto com 
-       <strong>negrito</strong>, <i>itálico</i> e <u>sublinhado</u> quando necessário.</p>
-    <p>Não esqueça também de colocar o link para voltar até o índice. (Lembra das âncoras?)</p>
+    <h2 id="historia">História dos computadores</h2>
+    <a href="indice">Voltar</a>
+    <br>
+      <p>Computadores, em sua essência mais simples, nada mais são do que complexas máquinas de realizar cálculos simples, em gigantesca quantidade em um curtíssimo espaço de tempo. Por meio desse processo é que o computador realiza tantas tarefas e torna nossa rotina muito mais fácil.
+         Ainda assim, é sempre bom lembrar: por mais poderosos e sofisticados que sejam, 
+         Parafraseando o físico <a href=https://www.pensador.com/frase/OTg0NDQy/></i>
 
     <h2>O que são <i>Clients</i>?</h2>
     <p><strong><u>INSTRUÇÕES:</u> </strong>Neste trecho, coloque com suas palavras o que entendeu sobre o assunto. 
